<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    tools:context="com.V1solution.procaculator.ui.permission.PermissionActivity">

    <View
        android:id="@+id/ads_container"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent" />


    <TextView
        android:id="@+id/tv_save_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="8dp"
        android:background="@drawable/bg_language_on"
        android:fontFamily="@font/opensans_semibold"
        android:gravity="center"
        android:text="@string/save_continue"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginBottom="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ads_container"
        app:layout_goneMarginBottom="8dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_Accessibility_Service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/tv_save_continue">

        <ImageView
            android:id="@+id/ic_Accessibility_Service"
            android:src="@drawable/ic_permission_off"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:textSize="14sp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/accessibility_service"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/ic_Accessibility_Service"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_Screen_Overlay_Access"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/cl_Accessibility_Service">

        <ImageView
            android:id="@+id/ic_Screen_Overlay_Access"
            android:src="@drawable/ic_permission_off"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:textSize="14sp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/screen_overlay_access"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/ic_Screen_Overlay_Access"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_Device_Storage_Access"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/cl_Screen_Overlay_Access">

        <ImageView
            android:id="@+id/ic_Device_Storage_Access"
            android:src="@drawable/ic_permission_off"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:textSize="14sp"
            android:fontFamily="@font/opensans_regular"
            android:text="Device Storage Access."
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/ic_Device_Storage_Access"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_permissions"
        app:layout_constraintBottom_toTopOf="@id/cl_Device_Storage_Access"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/opensans_bold"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        android:text="PERMISSION:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:src="@drawable/img_permission"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/tv_permissions"
        android:layout_marginBottom="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>