<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    tools:context="com.V1solution.procaculator.ui.home.HomeActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_bold"
                android:text="Calculator"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ic_setting"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_setting"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_basic_calculator"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="78dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/bg_border_white_16"
            android:padding="12dp"
            app:layout_constraintEnd_toStartOf="@id/cl_customize_formula"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_header">

            <ImageView
                android:id="@+id/img_basic_calculator"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                android:layout_marginTop="32dp"
                android:src="@drawable/img_basic_calculator"
                app:layout_constraintTop_toBottomOf="@id/basic_calculator"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/basic_calculator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/basic_calculator"
                    android:textColor="#1A172B"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_next_home"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_customize_formula"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="78dp"
            android:layout_marginEnd="12dp"
            android:padding="12dp"
            android:background="@drawable/bg_border_white_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cl_basic_calculator"
            app:layout_constraintTop_toBottomOf="@id/cl_header">

            <ImageView
                android:id="@+id/img_custom_formula"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                android:layout_marginTop="16dp"
                android:src="@drawable/img_custom_formula"
                app:layout_constraintTop_toBottomOf="@id/customize_formula"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/customize_formula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/customize_formula"
                    android:textColor="#1A172B"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_next_home"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_basic_calculator"
            android:id="@+id/cl_basic_maths"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:padding="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintEnd_toStartOf="@id/cl_history"
            android:background="@drawable/bg_border_white_16">

            <ImageView
                android:id="@+id/img_basic_maths"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                android:layout_marginTop="16dp"
                android:src="@drawable/img_basic_math_formulas"
                app:layout_constraintTop_toBottomOf="@id/basic_maths"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/basic_maths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/basic_maths_nformulas"
                    android:textColor="#1A172B"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_next_home"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_customize_formula"
            android:id="@+id/cl_history"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            app:layout_constraintStart_toEndOf="@id/cl_basic_maths"
            android:background="@drawable/bg_border_white_16">

            <ImageView
                android:id="@+id/img_history"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                android:layout_marginTop="27dp"
                android:src="@drawable/img_history"
                app:layout_constraintTop_toBottomOf="@id/history"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/history"
                    android:textColor="#1A172B"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_next_home"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>